Add NotFound page, Loader, PageLoader

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,5 +1,6 @@
 {
   "Текстовый перевод": "Текстовый перевод",
   "Перевод": "Перевод",
-  "Язык": "Английский"
+  "Язык": "Английский",
+  "Страница не найдена": "Страница не найдена"
 }
