--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,6 @@
 {
   "Текстовый перевод": "Text translate",
   "Перевод": "Translate",
-  "Язык": "Русский"
+  "Язык": "Русский",
+  "Страница не найдена": "Page not found"
 }
