--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2,5 +2,8 @@
   "Текстовый перевод": "Текстовый перевод",
   "Перевод": "Перевод",
   "Язык": "Английский",
-  "Страница не найдена": "Страница не найдена"
+  "Страница не найдена": "Страница не найдена",
+  "Произошла ошибка": "Произошла ошибка",
+  "Обновить страницу": "Обновить страницу",
+  "Создать ошибку": "Создать ошибку"
 }
