--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,5 +5,5 @@
   "Страница не найдена": "Page not found",
   "Произошла ошибка": "An error has occurred",
   "Обновить страницу": "Reload page",
-  "Создать ошибку": "Create mistake"
+  "Создать ошибку": "Create an error"
 }
