--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -10,5 +10,7 @@
   "throw error": "throw error",
   "Главная": "Main",
   "О сайте": "About us",
-  "Короткий язык": "Ru"
+  "Короткий язык": "Ru",
+  "Войти": "Enter",
+  "Введите username": "Enter username"
 }
