--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -10,5 +10,7 @@
   "throw error": "throw error",
   "Главная": "Главная",
   "О сайте": "О сайте",
-  "Короткий язык": "En"
+  "Короткий язык": "En",
+  "Войти": "Войти",
+  "Введите username": "Введите username"
 }
