--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -12,5 +12,8 @@
   "О сайте": "О сайте",
   "Короткий язык": "En",
   "Войти": "Войти",
-  "Введите username": "Введите username"
+  "Введите username": "Введите username",
+  "Форма авторизации": "Форма авторизации",
+  "Выйти": "Выйти",
+  "Неверный логин или пароль": "Неверный логин или пароль"
 }
