Add Profile page, slice, profileSchema, memo some components

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -15,5 +15,6 @@
   "Введите username": "Enter username",
   "Форма авторизации": "Auth Form",
   "Выйти": "Log out",
-  "Неверный логин или пароль": "Uncorrect username or password"
+  "Неверный логин или пароль": "Uncorrect username or password",
+  "Страница профиля": "Profile page"
 }
