--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -15,5 +15,6 @@
   "Введите username": "Введите username",
   "Форма авторизации": "Форма авторизации",
   "Выйти": "Выйти",
-  "Неверный логин или пароль": "Неверный логин или пароль"
+  "Неверный логин или пароль": "Неверный логин или пароль",
+  "Страница профиля": "Страница профиля"
 }
