--- a/public/locales/ru/profile.json
+++ b/public/locales/ru/profile.json
@@ -2,5 +2,9 @@
   "Профиль": "Профиль",
   "Редактировать": "Редактировать",
   "Введите ваше имя": "Введите ваше имя",
-  "Введите вашу фамилию": "Введите вашу фамилию"
+  "Введите вашу фамилию": "Введите вашу фамилию",
+  "Произошла ошибка при загрузке профиля": "Произошла ошибка при загрузке профиля",
+  "Попробуйте обновить страницу": "Попробуйте обновить страницу",
+  "Отменить": "Отменить",
+  "Сохранить": "Сохранить"
 }
