--- a/public/locales/ru/profile.json
+++ b/public/locales/ru/profile.json
@@ -3,6 +3,10 @@
   "Редактировать": "Редактировать",
   "Введите ваше имя": "Введите ваше имя",
   "Введите вашу фамилию": "Введите вашу фамилию",
+  "Введите ваш возраст": "Введите ваш возраст",
+  "Введите ваш город": "Введите ваш город",
+  "Введите имя профиля": "Введите ваш юзернейм",
+  "Введите ссылку на аватар": "Введите ссылку на аватар",
   "Произошла ошибка при загрузке профиля": "Произошла ошибка при загрузке профиля",
   "Попробуйте обновить страницу": "Попробуйте обновить страницу",
   "Отменить": "Отменить",
