Add currency, country entities; Private routes

--- a/public/locales/ru/profile.json
+++ b/public/locales/ru/profile.json
@@ -10,5 +10,7 @@
   "Произошла ошибка при загрузке профиля": "Произошла ошибка при загрузке профиля",
   "Попробуйте обновить страницу": "Попробуйте обновить страницу",
   "Отменить": "Отменить",
-  "Сохранить": "Сохранить"
+  "Сохранить": "Сохранить",
+  "Укажите валюту": "Укажите валюту",
+  "Укажите страну": "Укажите страну"
 }
