--- a/public/locales/en/profile.json
+++ b/public/locales/en/profile.json
@@ -10,5 +10,7 @@
   "Произошла ошибка при загрузке профиля": "Occurred due to a profile enable error",
   "Попробуйте обновить страницу": "Try refreshing the page",
   "Отменить": "Cancel",
-  "Сохранить": "Save"
+  "Сохранить": "Save",
+  "Укажите валюту": "Enter currency",
+  "Укажите страну": "Enter country"
 }
