--- a/public/locales/ru/profile.json
+++ b/public/locales/ru/profile.json
@@ -12,5 +12,10 @@
   "Отменить": "Отменить",
   "Сохранить": "Сохранить",
   "Укажите валюту": "Укажите валюту",
-  "Укажите страну": "Укажите страну"
+  "Укажите страну": "Укажите страну",
+  "Ошибка сервера": "Ошибка сервера",
+  "Неккоректный возраст": "Неккоректный возраст",
+  "Некорректный регион": "Некорректный регион",
+  "Имя и фамилия обязательны": "Имя и фамилия обязательны",
+  "Данные не указаны": "Данные не указаны"
 }
