--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -16,5 +16,9 @@
   "Форма авторизации": "Форма авторизации",
   "Выйти": "Выйти",
   "Неверный логин или пароль": "Неверный логин или пароль",
-  "Страница профиля": "Страница профиля"
+  "Страница профиля": "Страница профиля",
+  "{{count}} просмотров_zero": "{{count}} просмотров",
+  "{{count}} просмотров_one": "{{count}} просмотр",
+  "{{count}} просмотров_few": "{{count}} просмотра",
+  "{{count}} просмотров_many": "{{count}} просмотров"
 }
