added missing localization, stories; change some skeletons

--- a/public/locales/en/articles.json
+++ b/public/locales/en/articles.json
@@ -1,4 +1,6 @@
 {
   "Статья не найдена": "Article not found",
-  "Произошла ошибка при загрузке страницы": "Occurred due to a page inclusion error"
+  "Произошла ошибка при загрузке страницы": "Occurred due to a page inclusion error",
+  "Читать далее": "Read more",
+  "Рекомендуем": "Recommended"
 }
