--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -10,6 +10,10 @@
   "throw error": "throw error",
   "Главная": "Main",
   "О сайте": "About us",
+  "Профиль": "Profile",
+  "Статьи": "Articles",
+  "Редактировать": "Edit",
+  "Имя": "First name",
   "Короткий язык": "Ru",
   "Войти": "Enter",
   "Введите username": "Enter username",
@@ -17,6 +21,31 @@
   "Выйти": "Log out",
   "Неверный логин или пароль": "Uncorrect username or password",
   "Страница профиля": "Profile page",
+  "Спасибо за оценку": "Thanks for your rate",
+  "Админ.Панель": "Admin",
+  "Настройки": "Settings",
+  "Всё": "All",
+  "IT": "IT",
+  "Экономика": "Economics",
+  "Наука": "Science",
+  "Сортировать по": "Sort by:",
+  "Дате создания": "creation date",
+  "Заголовку": "title",
+  "Возрастанию": "ascending",
+  "Убыванию": "descending",
+  "Оцените статью": "Rate this article",
+  "Комментарии": "Comments",
+  "Отправить": "Send",
+  "Введите текст комментария": "Write a comment",
+  "Комментариев нет": "No comments",
+  "Вариант интерфейса": "Interface option",
+  "Редактирование статьи": "Edit article",
+  "Новый": "New",
+  "Старый": "Old",
+  "Поиск": "Search",
+  "Произошла ошибка при загрузке статей": "There was an error loading articles",
+  "Количеству просмотров": "count views",
+  "Статьи не найдены": "Статьи не найдены",
   "{{count}} просмотров_other": "{{count}} views",
   "{{count}} просмотров_one": "{{count}} view"
 }
