--- a/public/locales/ru/articles.json
+++ b/public/locales/ru/articles.json
@@ -1,4 +1,6 @@
 {
   "Статья не найдена": "Статья не найдена",
-  "Произошла ошибка при загрузке страницы": "Произошла ошибка при загрузке страницы"
+  "Произошла ошибка при загрузке страницы": "Произошла ошибка при загрузке страницы",
+  "Читать далее": "Читать далее",
+  "Рекомендуем": "Рекомендуем"
 }
