--- a/public/locales/ru/profile.json
+++ b/public/locales/ru/profile.json
@@ -17,5 +17,11 @@
   "Неккоректный возраст": "Неккоректный возраст",
   "Некорректный регион": "Некорректный регион",
   "Имя и фамилия обязательны": "Имя и фамилия обязательны",
-  "Данные не указаны": "Данные не указаны"
+  "Данные не указаны": "Данные не указаны",
+  "Имя": "Имя",
+  "Фамилия": "Фамилия",
+  "Возраст": "Возраст",
+  "Город": "Город",
+  "Юзернейм": "Юзернейм",
+  "Ссылка на аватар": "Ссылка на аватар"
 }
