--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -10,6 +10,9 @@
   "throw error": "throw error",
   "Главная": "Главная",
   "О сайте": "О сайте",
+  "Профиль": "Профиль",
+  "Статьи": "Статьи",
+  "Редактировать": "Редактировать",
   "Короткий язык": "En",
   "Войти": "Войти",
   "Введите username": "Введите username",
@@ -17,6 +20,31 @@
   "Выйти": "Выйти",
   "Неверный логин или пароль": "Неверный логин или пароль",
   "Страница профиля": "Страница профиля",
+  "Спасибо за оценку": "Спасибо за оценку",
+  "Админ.Панель": "Админка",
+  "Настройки": "Настройки",
+  "Всё": "Всё",
+  "IT": "IT",
+  "Экономика": "Экономика",
+  "Наука": "Наука",
+  "Сортировать по": "Сортировать по:",
+  "Дате создания": "дате создания",
+  "Заголовку": "заголовку",
+  "количеству просмотров": "количеству просмотров",
+  "Возрастанию": "возрастанию",
+  "Убыванию": "убыванию",
+  "Оцените статью": "Оцените статью",
+  "Комментарии": "Комментарии",
+  "Отправить": "Отправить",
+  "Введите текст комментария": "Введите текст комментария",
+  "Комментариев нет": "Комментариев нет",
+  "Редактирование статьи": "Редактирование статьи",
+  "Вариант интерфейса": "Вариант интерфейса",
+  "Новый": "Новый",
+  "Старый": "Старый",
+  "Поиск": "Поиск",
+  "Произошла ошибка при загрузке статей": "Произошла ошибка при загрузке статей",
+  "Статьи не найдены": "Articles does not found",
   "{{count}} просмотров_zero": "{{count}} просмотров",
   "{{count}} просмотров_one": "{{count}} просмотр",
   "{{count}} просмотров_few": "{{count}} просмотра",
